--- a/templates/profil/modifier.html.twig
+++ b/templates/profil/modifier.html.twig
@@ -78,7 +78,7 @@
             </div>
 
             {# Bouton Enregistrer en bas à droite #}
-            <div class="mt-10 flex justify-end">
+            <div class="mt-10 flex justify-center">
                 <button type="submit" class="px-12 py-3 bg-indigo-600 text-white font-bold rounded-xl shadow-lg hover:bg-indigo-700 transition-all">
                     Enregistrer
                 </button>
